4.01/Test/printf/[DA RIVEDERE]%n.c
//#include <stdio.h>

int infFun(){

  return 0;
}

char charFun(){

  return 'a';
}

int test(){

  int a = 10;
  int b[10] = {1,2,3,4,5,6,7,8,9,0};
  char c = 'a';
  char d[10] = {'H','e','l','l','o'};
  int x = 0;

  //printf("%n\n", 1);
  //printf("%n\n", -1);
  //printf("%n\n", a);
  printf("%n\n");  // error
  //printf("%n\n", b[1]);
  //printf("%n\n", "Hello world");  //error
  //printf("%n\n", c);
  //printf("%n\n", d);  // error
  //printf("%n\n", infFun());
  //printf("%n\n", charFun());
  //printf("%n\n", 1+1);
  //printf("%n\n", 1-1);
  //printf("%n\n", 1*1);
  //printf("%n\n", 1/1);
  //printf("%n\n", 1%1);
  //printf("%n\n", (1%1));
  //printf("%n\n",  ++a);
  //printf("%n\n", --a);
  //printf("%n\n", a++);
  //printf("%n\n", a--);
  //printf("%n\n", a=1);


  return 0;
}


int main(){

  test();

  return 0;
}
